<resources>
    <string name="app_name">App_Ticket_Firebase</string>

    <!--    activity_main    -->
    <string name="activity_main_title_txt">雲端購票 - %s</string>
    <string name="oneway_price_txt">單程票價：</string>
    <string name="roundtrip_discount_txt">來回折扣：</string>
    <string name="total_amount_txt">剩餘張數</string>
    <string name="buy_amount_txt">購買張數</string>
    <string name="roundtrip_amount_txt">來回票數</string>
    <string name="clear_txt">清除</string>
    <string name="record_txt">紀錄</string>
    <string name="buy_txt">購買</string>

    <string name="submit_info_txt">結帳資訊</string>
    <string name="submit_detail_txt">總張數：%d\n來回票：%d\n單程票：%d\n總金額：$%,d</string>
    <string name="result_success_txt">購買成功！</string>

    <string name="default_1000">1000</string>
    <string name="default_7">7.0</string>
    <string name="default_10">10</string>

    <!--    activity_login  -->
    <string name="activity_login_title_txt">雲端購票 - 登入</string>
    <string name="username_hint">請輸入帳號</string>
    <string name="order_login_txt">訂票登入</string>
    <string name="console_login_txt">後台登入</string>

    <!--    recyclerview_order_list    -->
    <string name="username">購買人</string>
    <string name="submit_time">購買時間</string>
    <string name="all_ticket_amount">總張數</string>
    <string name="roundtrip_amount">來回</string>
    <string name="oneway_amount">單程</string>
    <string name="price_amount">金額</string>

    <!--    activity_order_list    -->
    <string name="activity_order_list_title_txt">雲端購票紀錄 - %s</string>
    <string name="all_order_txt">所有雲端購票紀錄</string>

    <!--    OrderListAdapter    -->
    <string name="cancel_title">退票</string>
    <string name="cancel_message">是否要退票</string>
    <string name="cancel_yes">是</string>
    <string name="cancel_no">否</string>

    <!--    activity_console    -->
    <string name="activity_console_title_txt">雲端後台 - %s</string>
    <string name="discount">折扣：</string>
    <string name="amount">數量：</string>
    <string name="price">價格：</string>
    <string name="update">更新</string>
    <string name="update_success">更新成功</string>
    <string name="analytic_info">銷售統計</string>
    <string name="analytic_detail">總賣票數: %d 張\n總單程票: %d 張\n總來回票: %d 張(%d 組)\n總銷售金額: $%,d 元</string>
</resources>