<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--    票價資訊    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:orientation="horizontal">
        <!--    票價    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/oneway_price_txt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_ticket_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/default_1000"
                android:textSize="18sp" />

        </LinearLayout>

        <!--    折扣    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/roundtrip_discount_txt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_ticket_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/default_7"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <!--    購買資訊    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--    剩餘張數    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/total_amount_txt"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/default_10"
                android:textSize="22sp" />
        </LinearLayout>

        <!--    購買張數    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/buy_amount_txt"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_all_tickets"
                android:selectAllOnFocus="true"
                android:inputType="numberSigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="22sp" />
        </LinearLayout>

        <!--    來回組數    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/roundtrip_amount_txt"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_round_trip"
                android:selectAllOnFocus="true"
                android:inputType="numberSigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

    <!--    操作按鈕    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--    清除    -->
        <Button
            android:onClick="clear"
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#009688"
            android:padding="10dp"
            android:text="@string/clear_txt"
            android:textSize="20sp" />
        <!--    紀錄    -->
        <Button
            android:onClick="viewOrderList"
            android:id="@+id/btn_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#6089AA"
            android:padding="10dp"
            android:text="@string/record_txt"
            android:textSize="20sp" />
        <!--    購買    -->
        <Button
            android:onClick="buyTicket"
            android:id="@+id/btn_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#7F67AA"
            android:padding="10dp"
            android:text="@string/buy_txt"
            android:textSize="20sp" />
    </LinearLayout>

    <!--    結帳資訊    -->
    <LinearLayout
        android:id="@+id/ll_result"
        android:layout_margin="15dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/submit_info_txt"
            android:gravity="center"
            android:padding="20dp"/>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/submit_detail_txt"
            android:padding="20dp"/>
    </LinearLayout>

    <!--    警示資訊    -->
    <LinearLayout
        android:id="@+id/ll_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:background="@drawable/border">

        <TextView
            android:layout_gravity="center"
            android:id="@+id/tv_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/result_success_txt"
            android:textColor="#FF0000"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>