<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_marginVertical="1dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:onClick="sort"
                android:tag="key"
                android:id="@+id/tv_key_title"
                android:textSize="16.5sp"
                android:text="@string/submit_time"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4B000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_username_title"
                    android:onClick="sort"
                    android:tag="username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textSize="16.5sp" />

                <TextView
                    android:id="@+id/tv_allTickets_title"
                    android:onClick="sort"
                    android:tag="allTickets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/all_ticket_amount"
                    android:textSize="16.5sp" />

                <TextView
                    android:id="@+id/tv_roundTrip_title"
                    android:onClick="sort"
                    android:tag="roundTrip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/roundtrip_amount"
                    android:textSize="16.5sp" />

                <TextView
                    android:id="@+id/tv_oneWay_title"
                    android:onClick="sort"
                    android:tag="oneWay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/oneway_amount"
                    android:textSize="16.5sp" />

                <TextView
                    android:id="@+id/tv_total_title"
                    android:onClick="sort"
                    android:tag="total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/price_amount"
                    android:textSize="16.5sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>