<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_above="@id/et_username"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ticket" />

    <EditText
        android:hint="@string/username_hint"
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="20dp"
        android:textSize="25sp" />

    <Button
        android:onClick="orderLogin"
        android:id="@+id/btn_order_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:text="@string/order_login_txt"
        android:textSize="25sp" />

    <Button
        android:onClick="consoleLogin"
        android:id="@+id/btn_console_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_order_login"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/console_login_txt"
        android:textSize="25sp" />

</RelativeLayout>